<resources>
    <string name="app_name">uDrive</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_surname">Enter your surname</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="enter_password">Enter your password</string>
    <string name="eneter_phone_number">Enter your phone number</string>
    <string name="facebook">Facebook</string>
    <string name="title_activity_maps1">Map</string>
    <string name="password_remainder">Forget your password?</string>
    <string name="login_option">Or sign with social account</string>
    <string name="terms1">By clicking Sign up, you agree to our </string>
    <string name="terms2">Terms and Conditions</string>
    <string name="underchar">_</string>
    <string name="title_activity_client_map">Map</string>
    <string name="choose">Who are you gonna be today?</string>
    <string name="driver">I\'m driver</string>
    <string name="customer">I\'m customer</string>
    <string name="wallet">My wallet</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>
    <string name="promo">Promo code</string>
    <string name="logout">Logout</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="restoring_password">Forgot your password?</string>
    <string name="restoring_text">Please enter your email address below to receive your password reset instructions.</string>
    <string name="sent">Sent</string>
    <string name="add_card">Add card</string>
    <string name="payment_method">Payment method</string>
    <string name="add_funds">Add funds</string>
    <string name="become_driver">Become uDrive driver</string>
    <string name="become_client">Change to client</string>
    <string name="promo_code">Add promo Code</string>
    <string name="enter_promo">Enter promo code</string>
    <string name="check">Check code</string>
    <string name="cash">uDrive cash</string>
    <string name="credit_card">Add credit card</string>
    <string name="credit_card_number">Credit vard number</string>
    <string name="exp">Expires</string>
    <string name="cvv">CVV</string>
    <string name="save">Save</string>
    <string name="credit_name">Enter name</string>
    <string name="stars">**** **** **** ****</string>
    <string name="date1">mm</string>
    <string name="date2"> / </string>
    <string name="date3">yyyy</string>
    <string name="star">***</string>
    <string name="value_of_funds">Value of funds</string>
    <string name="value">000.00 PLN</string>
    <string name="credit_name_spec">Enter name (MasterCard / Visa)</string>
    <string name="edit_data">Edit Data</string>
    <string name="call_driver">Call Driver</string>
    <string name="question">Are you sure that you want to logout ?</string>
    <string name="reviews">Reviews</string>
    <string name="earned">You earned</string>
    <string name="send_cash">Send uDrive cash to account</string>
    <string name="comment_section">Additional comments...</string>
</resources>
