<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/wallet_item2"
        android:icon="@mipmap/wallet"
        android:title="@string/wallet" />
    <item
        android:id="@+id/history_item2"
        android:icon="@mipmap/history"
        android:title="@string/history" />
    <item
        android:id="@+id/notifications_item2"
        android:icon="@mipmap/notification"
        android:title="@string/notifications"
        app:actionLayout="@layout/switch_item" />
    <item
        android:id="@+id/reviews_item"
        android:icon="@mipmap/reviews_icon"
        android:title="@string/reviews" />
    <item
        android:id="@+id/logout_item2"
        android:icon="@mipmap/logout"
        android:title="@string/logout" />
</menu>