<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingCreditCard">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back6"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            app:srcCompat="@mipmap/back_arrow" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="243dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="85dp"
            android:text="@string/credit_card"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/credit_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/credit_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/credit_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credit_card_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/stars"
            android:inputType="numberDecimal"
            android:maxLength="16" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credit_card_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp"
            android:text="@string/credit_card_number"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credit_card_number"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp"
            android:text="@string/exp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cvv"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credit_card_number"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/star"
            android:inputType="numberDecimal"
            android:maxLength="3" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credit_card_number"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="137dp"
            android:text="@string/cvv"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cvv"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="105dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="105dp"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/date1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credit_card_number"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:hint="@string/date1"
            android:inputType="date"
            android:maxLength="2" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credit_card_number"
            android:layout_marginStart="0dp"
            android:layout_marginTop="37dp"
            android:layout_toEndOf="@+id/date1"
            android:text="@string/date2"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/date2"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credit_card_number"
            android:layout_marginStart="0dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/textView16"
            android:ems="10"
            android:hint="@string/date3"
            android:inputType="date"
            android:maxLength="4" />

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/save"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="180dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="180dp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>