<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frag2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="259dp"
            android:layout_height="400dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/Sign_Up_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/blue"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/Sign_Up_Button"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/eneter_phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/Password1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/Phone"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/Email1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/Password1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/Surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/Email1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/enter_surname"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/Surname"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/Name_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/Name"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="1dp"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Surname_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/Surname"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="1dp"
                android:text="@string/surname"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Email_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/Email1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="1dp"
                android:text="@string/email"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Password_Text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/Password1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="1dp"
                android:text="@string/password"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Phone_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/Phone"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="1dp"
                android:text="@string/phone_number"
                android:textStyle="bold" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintVertical_bias="0.077" />

        <TextView
            android:id="@+id/terms1"
            android:layout_width="231dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/terms1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.135" />

        <TextView
            android:id="@+id/terms2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/terms2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.132" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>