<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestoringPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back1"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            app:srcCompat="@mipmap/back_arrow" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="243dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="85dp"
            android:text="@string/restoring_password"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="273dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="125dp"
            android:text="@string/restoring_text"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="185dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/RestoringPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="205dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/SentButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RestoringPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="105dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="105dp"
            android:background="@drawable/button_background"
            android:text="@string/sent"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>